--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.46",
     "@langchain/ollama": "^0.2.0",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "duck-duck-scrape": "^2.2.7",
+    "lucide-vue-next": "^0.475.0",
+    "radix-vue": "^1.9.15",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.2",
-    "zod": "^3.24.2",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
