--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.46",
     "@langchain/ollama": "^0.2.0",
+    "@vueuse/core": "^12.7.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
